Implement requesting new password #12

--- a/ClientApp/Views/ForgotPasswordDialog.xaml
+++ b/ClientApp/Views/ForgotPasswordDialog.xaml
@@ -22,7 +22,7 @@
 
         <PasswordBox x:Name="ConfirmPasswordBox" PlaceholderText="Confirm Password" Visibility="Collapsed" KeyDown="OnTextBoxKeyDown" Margin="0 10"/>
 
-        <TextBlock x:Name="ErrorText" TextWrapping="Wrap" Text="" Visibility="Collapsed" Foreground="#FFA60000" Margin="0 10"/>
+        <TextBlock x:Name="ErrorText" TextWrapping="Wrap" Text="" Visibility="Collapsed" Foreground="#FFA60000" Margin="0 10" Width="350"/>
 
         <Grid Margin="0 10">
             <Button x:Name="RequestButton" Content="Request new password" Click="Request" />
