--- a/ClientApp/Views/LoginRegisterPage.xaml
+++ b/ClientApp/Views/LoginRegisterPage.xaml
@@ -29,7 +29,14 @@
             <TextBlock x:Name="ErrorText" Margin="10" TextWrapping="Wrap" Text="" Visibility="Collapsed" Height="56" Width="210" Foreground="#FFA60000"/>
             
             <StackPanel Orientation="Horizontal">
-                <Button Content="Login" Margin="10" Click="Login"/>
+                <Button Margin="10" Click="Login">
+                    <StackPanel Orientation="Horizontal">
+                        <Grid x:Name="LoginBackIcon" Visibility="Collapsed" Margin="0 0 10 0">
+                            <SymbolIcon>Back</SymbolIcon>
+                        </Grid>
+                        <TextBlock>Login</TextBlock>
+                    </StackPanel>
+                </Button>
                 <Button Content="Register" Margin="10" Click="Register"/>
             </StackPanel>
 
