--- a/ClientApp/Views/ForgotPasswordDialog.xaml
+++ b/ClientApp/Views/ForgotPasswordDialog.xaml
@@ -10,7 +10,7 @@
 
     <StackPanel Orientation="Vertical">
 
-        <TextBox x:Name="EmailBox" PlaceholderText="Email" IsSpellCheckEnabled="False" KeyDown="OnTextBoxKeyDown" Margin="0 10"/>
+        <TextBox x:Name="EmailBox" PlaceholderText="Email address" IsSpellCheckEnabled="False" KeyDown="OnTextBoxKeyDown" Margin="0 10"/>
 
         <Border x:Name="Border1" Margin="0 10" Visibility="Collapsed" BorderThickness="1" BorderBrush="{ThemeResource SystemBaseLowColor}"/>
 
@@ -20,7 +20,7 @@
 
         <PasswordBox x:Name="PasswordBox" PlaceholderText="Password"  KeyDown="OnTextBoxKeyDown" Visibility="Collapsed" Margin="0 10"/>
 
-        <PasswordBox x:Name="ConfirmPasswordBox" PlaceholderText="Confirm Password" Visibility="Collapsed" KeyDown="OnTextBoxKeyDown" Margin="0 10"/>
+        <PasswordBox x:Name="ConfirmPasswordBox" PlaceholderText="Confirm password" Visibility="Collapsed" KeyDown="OnTextBoxKeyDown" Margin="0 10"/>
 
         <TextBlock x:Name="ErrorText" TextWrapping="Wrap" Text="" Visibility="Collapsed" Foreground="#FFA60000" Margin="0 10" Width="350"/>
 
@@ -28,7 +28,7 @@
             <Button x:Name="RequestButton" Content="Request new password" Click="Request" />
             <Button x:Name="ResetButton" Content="Set new password" Click="Reset" Visibility="Collapsed"/>
 
-            <Button x:Name="CloseButton" Content="Close" Click="Close" Margin="10 0 0 0" HorizontalAlignment="Right"/>
+            <Button x:Name="CloseButton" Content="Cancel" Click="Close" Margin="10 0 0 0" HorizontalAlignment="Right"/>
         </Grid>
 
     </StackPanel>
