--- a/ClientApp/Views/LoginRegisterPage.xaml
+++ b/ClientApp/Views/LoginRegisterPage.xaml
@@ -18,15 +18,15 @@
 
         <StackPanel Padding="25" Grid.Column="0" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" BorderThickness="1" BorderBrush="#888">
 
-            <TextBox x:Name="FirstNameBox" Margin="10" TextWrapping="Wrap" PlaceholderText="FirstName" Width="210" IsSpellCheckEnabled="False" Visibility="Collapsed" KeyDown="OnTextBoxKeyDown"/>
-            <TextBox x:Name="LastNameBox" Margin="10" TextWrapping="Wrap" PlaceholderText="LastName" Width="210" IsSpellCheckEnabled="False" Visibility="Collapsed" KeyDown="OnTextBoxKeyDown"/>
+            <TextBox x:Name="FirstNameBox" Margin="10" TextWrapping="Wrap" PlaceholderText="First name" Width="210" IsSpellCheckEnabled="False" Visibility="Collapsed" KeyDown="OnTextBoxKeyDown"/>
+            <TextBox x:Name="LastNameBox" Margin="10" TextWrapping="Wrap" PlaceholderText="Last name" Width="210" IsSpellCheckEnabled="False" Visibility="Collapsed" KeyDown="OnTextBoxKeyDown"/>
 
-            <TextBox x:Name="EmailBox" Margin="10" TextWrapping="Wrap" PlaceholderText="Email" Width="210" IsSpellCheckEnabled="False" KeyDown="OnTextBoxKeyDown"/>
+            <TextBox x:Name="EmailBox" Margin="10" TextWrapping="Wrap" PlaceholderText="Email address" Width="210" IsSpellCheckEnabled="False" KeyDown="OnTextBoxKeyDown"/>
             <PasswordBox x:Name="PasswordBox" Margin="10" PlaceholderText="Password" Width="210" KeyDown="OnTextBoxKeyDown"/>
 
-            <PasswordBox x:Name="ConfirmPasswordBox" Margin="10" PlaceholderText="ConfirmPassword" Width="210" Visibility="Collapsed" KeyDown="OnTextBoxKeyDown"/>
+            <PasswordBox x:Name="ConfirmPasswordBox" Margin="10" PlaceholderText="Confirm password" Width="210" Visibility="Collapsed" KeyDown="OnTextBoxKeyDown"/>
             
-            <TextBlock x:Name="ErrorText" Margin="10" TextWrapping="Wrap" Text="" Visibility="Collapsed" Height="56" Width="210" Foreground="#FFA60000"/>
+            <TextBlock x:Name="ErrorText" Margin="10" TextWrapping="Wrap" Visibility="Collapsed" Width="210" Foreground="#FFA60000"/>
             
             <StackPanel Orientation="Horizontal">
                 <Button Margin="10" Click="Login">
