--- a/ClientApp/Views/NotificationPart.xaml
+++ b/ClientApp/Views/NotificationPart.xaml
@@ -1,43 +1,53 @@
-﻿<RelativePanel
-    x:Class="ClientApp.Views.NotificationPart"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:m="using:ClientApp.Models"
-    mc:Ignorable="d">
+﻿<StackPanel x:Class="ClientApp.Views.NotificationPart"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:m="using:ClientApp.Models"
+        mc:Ignorable="d"
+        Width="425" Height="350">
 
-    <StackPanel Width="350" Height="300">
-        
-        <StackPanel Orientation="Horizontal">
-            <TextBlock Margin="0,8" Style="{ThemeResource TitleTextBlockStyle}">Notifications</TextBlock>
-            <Button Click="MarkAll" VerticalAlignment="Center" Margin="10 0 0 0" Background="Transparent">
-                <SymbolIcon>Accept</SymbolIcon>
-            </Button>
-        </StackPanel>
+    <StackPanel Orientation="Horizontal">
+        <TextBlock Margin="8" Style="{ThemeResource TitleTextBlockStyle}">Notifications</TextBlock>
+        <Button Click="MarkAll" VerticalAlignment="Center" Margin="10 0 0 0" Background="Transparent">
+            <SymbolIcon>Accept</SymbolIcon>
+        </Button>
+    </StackPanel>
 
-        <ListView x:Name="Notifications" ItemsSource="{x:Bind notifications}" ScrollViewer.VerticalScrollBarVisibility="Visible" Height="250">
-            <ListView.ItemTemplate>
-                <DataTemplate x:DataType="m:Notification">
-                    <StackPanel Margin="0 10" Orientation="Horizontal">
-                        <StackPanel Orientation="Vertical" Width="285" Tapped="Act" Tag="{x:Bind}">
-                            
-                            <TextBlock Text="{x:Bind Message}" FontSize="15"
+    <ListView x:Name="Notifications" ItemsSource="{x:Bind notifications}" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Height="300">
+        <ListView.ItemTemplate>
+            <DataTemplate x:DataType="m:Notification">
+                <Grid Margin="0 10">
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+
+                    <StackPanel Orientation="Vertical" Grid.Column="0" Tapped="Act" Tag="{x:Bind}">
+
+                        <TextBlock Text="{x:Bind Message}" FontSize="15"
                                TextWrapping="WrapWholeWords" />
 
-                            <TextBlock Text="{x:Bind FormattedTimestamp}" FontSize="10"
+                        <TextBlock Text="{x:Bind FormattedTimestamp}" FontSize="10"
                                Grid.Column="0" Grid.Row="1"/>
-                            
-                        </StackPanel>
-
-                        <Button Click="Mark" Visibility="{x:Bind IsUnread}" Background="Transparent" Tag="{x:Bind}" HorizontalAlignment="Right">
-                            <SymbolIcon>Accept</SymbolIcon>
-                        </Button>
 
                     </StackPanel>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
 
-    </StackPanel>
-</RelativePanel>
+                    <Button Click="Mark" Grid.Column="1" Visibility="{x:Bind IsUnread}" Background="Transparent" Tag="{x:Bind}">
+                        <SymbolIcon>Accept</SymbolIcon>
+                    </Button>
+
+                </Grid>
+            </DataTemplate>
+
+        </ListView.ItemTemplate>
+
+        <ListView.ItemContainerStyle>
+            <Style TargetType="ListViewItem">
+                <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+            </Style>
+        </ListView.ItemContainerStyle>
+    </ListView>
+
+</StackPanel>
