--- a/ClientApp/Views/OwnedMasterDetail.xaml
+++ b/ClientApp/Views/OwnedMasterDetail.xaml
@@ -18,7 +18,7 @@
 
     <!--Start master detail-->
     <Grid>
-        <controls:MasterDetailsView x:Name="MasterDetail" SelectionChanged="LoadDetails"
+        <controls:MasterDetailsView x:Name="MasterDetail"
             ItemsSource="{x:Bind Lists, Mode=OneWay}"
             CompactModeThresholdWidth="720"
             MasterPaneBackground="{ThemeResource MiddlePaneBackground}"
@@ -196,8 +196,7 @@
                                                         <ColumnDefinition/>
                                                         <ColumnDefinition Width="50"/>
                                                     </Grid.ColumnDefinitions>
-                                                    <TextBox Text="{x:Bind Email}"
-                                                    Grid.Column="0" />
+                                                    <TextBox Text="{x:Bind Email}" Grid.Column="0" Width="200"/>
                                                     <Button Grid.Column="1" Background="Transparent" VerticalAlignment="Center">
                                                         <SymbolIcon>Delete</SymbolIcon>
                                                     </Button>
